Mejoramos el direccionamiento de los archivos

--- a/materias/Codo a Codo/JS/JS.html
+++ b/materias/Codo a Codo/JS/JS.html
@@ -16,7 +16,7 @@
 <li><a href="https://T0p2.github.io/repo-desarollo-web-automatizado/materias/Codo a Codo/JS/Clase 17. JS 5.pdf" target="_blank">Clase 17. JS 5.pdf</a></li>
 <li><a href="https://T0p2.github.io/repo-desarollo-web-automatizado/materias/Codo a Codo/JS/Clase 18. JS 6.pdf" target="_blank">Clase 18. JS 6.pdf</a></li>
 <li><a href="https://T0p2.github.io/repo-desarollo-web-automatizado/materias/Codo a Codo/JS/JS.html" target="_blank">JS.html</a></li>
-<li><a href="/materias/Codo a Codo/JS/VUE/VUE.html">VUE</a></li>
+<li><a href="https://T0p2.github.io/repo-desarollo-web-automatizado/materias/Codo a Codo/JS/VUE/VUE.html">VUE</a></li>
 
         </ul>
     </body>
