--- a/index.html
+++ b/index.html
@@ -1,40 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ï¿½ndice de Materias</title>
-</head>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Índice de Materias</title>
+    </head>
+    <body>
+        <h1>Índice de Materias</h1>
+        <ul>
+    <li><a href="https://T0p2.github.io/repo-desarollo-web-automatizado/materias/Codo a Codo/Codo a Codo.html">Codo a Codo</a></li>
+<li><a href="https://T0p2.github.io/repo-desarollo-web-automatizado/materias/MateriasHTML/MateriasHTML.html">MateriasHTML</a></li>
+<li><a href="https://T0p2.github.io/repo-desarollo-web-automatizado/materias/Sis Int/Sis Int.html">Sis Int</a></li>
+<li><a href="https://T0p2.github.io/repo-desarollo-web-automatizado/materias/economia/economia.html">economia</a></li>
+<li><a href="https://T0p2.github.io/repo-desarollo-web-automatizado/materias/fisica/fisica.html">fisica</a></li>
+<li><a href="https://T0p2.github.io/repo-desarollo-web-automatizado/materias/imagenes/imagenes.html">imagenes</a></li>
+<li><a href="https://T0p2.github.io/repo-desarollo-web-automatizado/materias/ing en Soft1/ing en Soft1.html">ing en Soft1</a></li>
+<li><a href="https://T0p2.github.io/repo-desarollo-web-automatizado/materias/lenguajes formales/lenguajes formales.html">lenguajes formales</a></li>
+<li><a href="https://T0p2.github.io/repo-desarollo-web-automatizado/materias/matematica/matematica.html">matematica</a></li>
+<li><a href="https://T0p2.github.io/repo-desarollo-web-automatizado/materias/redes1/redes1.html">redes1</a></li>
 
-<body>
-    <h1>ï¿½ndice de Materias</h1>
-    <ul>
-        <li><a href="https://T0p2.github.io/repo-desarollo-web-automatizado/materias/Codo a Codo/Codo a Codo.html">Codo
-                a Codo</a></li>
-        <li><a
-                href="https://T0p2.github.io/repo-desarollo-web-automatizado/materias/MateriasHTML/MateriasHTML.html">MateriasHTML</a>
-        </li>
-        <li><a href="https://T0p2.github.io/repo-desarollo-web-automatizado/materias/Sis Int/Sis Int.html">Sis Int</a>
-        </li>
-        <li><a
-                href="https://T0p2.github.io/repo-desarollo-web-automatizado/materias/economia/economia.html">economia</a>
-        </li>
-        <li><a href="https://T0p2.github.io/repo-desarollo-web-automatizado/materias/fisica/fisica.html">fisica</a></li>
-        <li><a
-                href="https://T0p2.github.io/repo-desarollo-web-automatizado/materias/imagenes/imagenes.html">imagenes</a>
-        </li>
-        <li><a href="https://T0p2.github.io/repo-desarollo-web-automatizado/materias/ing en Soft1/ing en Soft1.html">ing
-                en Soft1</a></li>
-        <li><a
-                href="https://T0p2.github.io/repo-desarollo-web-automatizado/materias/lenguajes formales/lenguajes formales.html">lenguajes
-                formales</a></li>
-        <li><a
-                href="https://T0p2.github.io/repo-desarollo-web-automatizado/materias/matematica/matematica.html">matematica</a>
-        </li>
-        <li><a href="https://T0p2.github.io/repo-desarollo-web-automatizado/materias/redes1/redes1.html">redes1</a></li>
-
-    </ul>
-</body>
-
-</html>
+        </ul>
+    </body>
+    </html>
+    
