--- a/materias/matematica/matematica.html
+++ b/materias/matematica/matematica.html
@@ -9,8 +9,8 @@
     <body>
         <h1>matematica</h1>
         <ul>
-    <li><a href="/materias/matematica/calculo1/calculo1.html">calculo1</a></li>
-<li><a href="/materias/matematica/discreta/discreta.html">discreta</a></li>
+    <li><a href="https://T0p2.github.io/repo-desarollo-web-automatizado/materias/matematica/calculo1/calculo1.html">calculo1</a></li>
+<li><a href="https://T0p2.github.io/repo-desarollo-web-automatizado/materias/matematica/discreta/discreta.html">discreta</a></li>
 <li><a href="https://T0p2.github.io/repo-desarollo-web-automatizado/materias/matematica/matematica.html" target="_blank">matematica.html</a></li>
 
         </ul>
