--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Índice de Materias</title>
+        <link rel="stylesheet" href="{BASE_URL}/styleFacultad.css">
+        <title>Indice de Materias</title>
     </head>
     <body>
-        <h1>Índice de Materias</h1>
+        <h1>Indice de Materias</h1>
         <ul>
     <li><a href="https://T0p2.github.io/repo-desarollo-web-automatizado/materias/Codo a Codo/Codo a Codo.html">Codo a Codo</a></li>
 <li><a href="https://T0p2.github.io/repo-desarollo-web-automatizado/materias/MateriasHTML/MateriasHTML.html">MateriasHTML</a></li>
