--- a/materias/Codo a Codo/CSS/BootStrap/BootStrap.html
+++ b/materias/Codo a Codo/CSS/BootStrap/BootStrap.html
@@ -10,7 +10,8 @@
     <body>
         <h1>BootStrap</h1>
         <ul>
-    <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Codo a Codo/CSS/BootStrap/Clase 11. Bootstrap.pdf" target="_blank">Clase 11. Bootstrap.pdf</a></li>
+    <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Codo a Codo/CSS/BootStrap/BootStrap.html" target="_blank">BootStrap.html</a></li>
+<li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Codo a Codo/CSS/BootStrap/Clase 11. Bootstrap.pdf" target="_blank">Clase 11. Bootstrap.pdf</a></li>
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Codo a Codo/CSS/BootStrap/Formularios y Botones.url" target="_blank">Formularios y Botones.url</a></li>
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Codo a Codo/CSS/BootStrap/Instalación via CDN.url" target="_blank">Instalación via CDN.url</a></li>
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Codo a Codo/CSS/BootStrap/Material imprimible.pdf" target="_blank">Material imprimible.pdf</a></li>
