--- a/materias/Codo a Codo/Codo a Codo.html
+++ b/materias/Codo a Codo/Codo a Codo.html
@@ -11,6 +11,7 @@
         <h1>Codo a Codo</h1>
         <ul>
     <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Codo a Codo/CSS/CSS.html">CSS</a></li>
+<li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Codo a Codo/Codo a Codo.html" target="_blank">Codo a Codo.html</a></li>
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Codo a Codo/DJANGO/DJANGO.html">DJANGO</a></li>
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Codo a Codo/Drive Codo a Codo  Full Stack.url" target="_blank">Drive Codo a Codo  Full Stack.url</a></li>
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Codo a Codo/GIT/GIT.html">GIT</a></li>
