--- a/materias/Codo a Codo/DJANGO/DJANGO.html
+++ b/materias/Codo a Codo/DJANGO/DJANGO.html
@@ -10,7 +10,8 @@
     <body>
         <h1>DJANGO</h1>
         <ul>
-    <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Codo a Codo/DJANGO/Material complementario de la unidad de Django.url" target="_blank">Material complementario de la unidad de Django.url</a></li>
+    <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Codo a Codo/DJANGO/DJANGO.html" target="_blank">DJANGO.html</a></li>
+<li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Codo a Codo/DJANGO/Material complementario de la unidad de Django.url" target="_blank">Material complementario de la unidad de Django.url</a></li>
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Codo a Codo/DJANGO/Material imprimible Archivo.url" target="_blank">Material imprimible Archivo.url</a></li>
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Codo a Codo/DJANGO/Tutorial - Desarrollando una aplicación web con Python y Django.pdf" target="_blank">Tutorial - Desarrollando una aplicación web con Python y Django.pdf</a></li>
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Codo a Codo/DJANGO/beginners_python_cheat_sheet_pcc_django_new.pdf" target="_blank">beginners_python_cheat_sheet_pcc_django_new.pdf</a></li>
