--- a/materias/Codo a Codo/JS/VUE/VUE.html
+++ b/materias/Codo a Codo/JS/VUE/VUE.html
@@ -15,6 +15,7 @@
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Codo a Codo/JS/VUE/Clase 21. Vue 3.pdf" target="_blank">Clase 21. Vue 3.pdf</a></li>
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Codo a Codo/JS/VUE/Ejemplos VUE.zip" target="_blank">Ejemplos VUE.zip</a></li>
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Codo a Codo/JS/VUE/Material imprimible Archivo.url" target="_blank">Material imprimible Archivo.url</a></li>
+<li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Codo a Codo/JS/VUE/VUE.html" target="_blank">VUE.html</a></li>
 
         </ul>
     </body>
