--- a/materias/Codo a Codo/SCRUM/SCRUM.html
+++ b/materias/Codo a Codo/SCRUM/SCRUM.html
@@ -12,6 +12,7 @@
         <ul>
     <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Codo a Codo/SCRUM/Clase especial. Scrum.pdf" target="_blank">Clase especial. Scrum.pdf</a></li>
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Codo a Codo/SCRUM/MaterialImprimibleScrum.pdf" target="_blank">MaterialImprimibleScrum.pdf</a></li>
+<li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Codo a Codo/SCRUM/SCRUM.html" target="_blank">SCRUM.html</a></li>
 
         </ul>
     </body>
