--- a/materias/Codo a Codo/JS/JS.html
+++ b/materias/Codo a Codo/JS/JS.html
@@ -16,6 +16,7 @@
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Codo a Codo/JS/Clase 16. JS 4.pdf" target="_blank">Clase 16. JS 4.pdf</a></li>
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Codo a Codo/JS/Clase 17. JS 5.pdf" target="_blank">Clase 17. JS 5.pdf</a></li>
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Codo a Codo/JS/Clase 18. JS 6.pdf" target="_blank">Clase 18. JS 6.pdf</a></li>
+<li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Codo a Codo/JS/JS.html" target="_blank">JS.html</a></li>
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Codo a Codo/JS/VUE/VUE.html">VUE</a></li>
 
         </ul>
