--- a/materias/Codo a Codo/Laburo en IT/Laburo en IT.html
+++ b/materias/Codo a Codo/Laburo en IT/Laburo en IT.html
@@ -11,6 +11,7 @@
         <h1>Laburo en IT</h1>
         <ul>
     <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Codo a Codo/Laburo en IT/5 Habilidades blandas - habilidades para buscar empleo - 2024_.pdf" target="_blank">5 Habilidades blandas - habilidades para buscar empleo - 2024_.pdf</a></li>
+<li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Codo a Codo/Laburo en IT/Laburo en IT.html" target="_blank">Laburo en IT.html</a></li>
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Codo a Codo/Laburo en IT/¿Qué buscan los reclutadores.url" target="_blank">¿Qué buscan los reclutadores.url</a></li>
 
         </ul>
