--- a/materias/Lenguajes de programacion/Lenguajes de programacion.html
+++ b/materias/Lenguajes de programacion/Lenguajes de programacion.html
@@ -10,7 +10,8 @@
     <body>
         <h1>Lenguajes de programacion</h1>
         <ul>
-    <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Lenguajes de programacion/MINTZBERG_Apunte_Diseño_Organiz.pdf" target="_blank">MINTZBERG_Apunte_Diseño_Organiz.pdf</a></li>
+    <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Lenguajes de programacion/Lenguajes de programacion.html" target="_blank">Lenguajes de programacion.html</a></li>
+<li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Lenguajes de programacion/MINTZBERG_Apunte_Diseño_Organiz.pdf" target="_blank">MINTZBERG_Apunte_Diseño_Organiz.pdf</a></li>
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Lenguajes de programacion/Numerical analysis.pdf" target="_blank">Numerical analysis.pdf</a></li>
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Lenguajes de programacion/libro2012.pdf" target="_blank">libro2012.pdf</a></li>
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Lenguajes de programacion/matematicas_python.pdf" target="_blank">matematicas_python.pdf</a></li>
