--- a/materias/materias.html
+++ b/materias/materias.html
@@ -10,12 +10,12 @@
     <body>
         <h1>materias</h1>
         <ul>
-    <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Codo a Codo/Codo a Codo.html">Codo a Codo</a></li>
+    <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Algoritmos2/Algoritmos2.html">Algoritmos2</a></li>
+<li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Codo a Codo/Codo a Codo.html">Codo a Codo</a></li>
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Fundamentos de la comunicacion/Fundamentos de la comunicacion.html">Fundamentos de la comunicacion</a></li>
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Lenguajes de programacion/Lenguajes de programacion.html">Lenguajes de programacion</a></li>
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/MateriasHTML/MateriasHTML.html">MateriasHTML</a></li>
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/README.md" target="_blank">README.md</a></li>
-<li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Sis Int/Sis Int.html">Sis Int</a></li>
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Sistemas de info y orga/Sistemas de info y orga.html">Sistemas de info y orga</a></li>
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/base de datos/base de datos.html">base de datos</a></li>
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/economia/economia.html">economia</a></li>
@@ -26,6 +26,7 @@
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/matematica/matematica.html">matematica</a></li>
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/materias.html" target="_blank">materias.html</a></li>
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/redes1/redes1.html">redes1</a></li>
+<li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/sistemas Inteligentes/sistemas Inteligentes.html">sistemas Inteligentes</a></li>
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/sistemas operativos 1/sistemas operativos 1.html">sistemas operativos 1</a></li>
 
         </ul>
