--- a/materias/sistemas operativos 1/sistemas operativos 1.html
+++ b/materias/sistemas operativos 1/sistemas operativos 1.html
@@ -15,6 +15,7 @@
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/sistemas operativos 1/Final Turno Mañana 2.jpeg" target="_blank">Final Turno Mañana 2.jpeg</a></li>
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/sistemas operativos 1/Final Turno Mañana 3.jpeg" target="_blank">Final Turno Mañana 3.jpeg</a></li>
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/sistemas operativos 1/SistemasOperativos-09diciembre2021 (2).doc" target="_blank">SistemasOperativos-09diciembre2021 (2).doc</a></li>
+<li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/sistemas operativos 1/sistemas operativos 1.html" target="_blank">sistemas operativos 1.html</a></li>
 
         </ul>
     </body>
