--- a/materias/Sistemas de info y orga/Sistemas de info y orga.html
+++ b/materias/Sistemas de info y orga/Sistemas de info y orga.html
@@ -13,6 +13,7 @@
     <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Sistemas de info y orga/02 Sistemas ERP (1).pdf" target="_blank">02 Sistemas ERP (1).pdf</a></li>
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Sistemas de info y orga/BI-Business-Intelligence-Competir-Con-Informacion_Dataprix.pdf" target="_blank">BI-Business-Intelligence-Competir-Con-Informacion_Dataprix.pdf</a></li>
 <li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Sistemas de info y orga/GUION DE CLASE BI (2).docx" target="_blank">GUION DE CLASE BI (2).docx</a></li>
+<li><a href="https://T0p2.github.io/Repositorio-Automatizado-de-Archivos/materias/Sistemas de info y orga/Sistemas de info y orga.html" target="_blank">Sistemas de info y orga.html</a></li>
 
         </ul>
     </body>
